<resources>
    // common
    <string name="app_name">befit</string>
    <string name="diary">Дневник</string>
    <string name="diet">Рационы</string>
    <string name="chat">Чат</string>
    <string name="recipe">Рецепты</string>
    <string name="profile">Профиль</string>

    <string name="logout">Выход</string>

    // welcome
    <string name="registration">Начать</string>
    <string name="login">Войти</string>
    <string name="welcome">Начните следить\nза своим питанием\nвместе с <font color='#EAFAB1'>befit</font></string>

    // registration
    <string name="registration_text">В первый раз здесь?\nСоздайте аккаунт!</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="to_login">Авторизуйтесь</string>
    <string name="next">Продолжить</string>
    <string name="what_is_u_name">Как вас зовут?</string>
    <string name="name">Имя</string>
    <string name="choose_gender">Выберите пол</string>
    <string name="when_were_u_born">Когда вы родились?</string>
    <string name="dateOfBirth">Дата рождения</string>
    <string name="height_and_weight">Какой у вас рост и вес?</string>
    <string name="height">Рост (в см)</string>
    <string name="weight">Вес (в кг)</string>
    <string name="what_is_u_goal">Какая у вас цель?</string>
    <string name="lose_weight">Сбросить вес</string>
    <string name="maintain_weight">Поддерживать вес</string>
    <string name="gain_weight">Набрать вес</string>
    <string name="level_of_physical_activity">Какой у вас уровень\nфизической активности?</string>
    <string name="low">Низкий</string>
    <string name="moderate">Умеренный</string>
    <string name="high">Высокий</string>
    <string name="complete">Завершить</string>

    // login
    <string name="login_text">Рады видеть\nвас снова!</string>
    <string name="havent_account">Нет аккаунта?</string>
    <string name="to_registration">Зарегистрируйтесь</string>

    // diary
    <string name="eaten">съедено</string>
    <string name="proteins">белки</string>
    <string name="fats">жиры</string>
    <string name="carbohydrates">углеводы</string>
    <string name="remained">осталось</string>
    <string name="add_meal">Добавить\nприём пищи</string>
    <string name="add_dimensions">Добавить\nзамеры</string>
    <string name="water_balance">Водный баланс</string>
    <string name="goal">Цель:</string>
    <string name="morning">Доброе утро, %s!</string>
    <string name="afternoon">Добрый день, %s!</string>
    <string name="evening">Доброе вечер, %s!</string>
    <string name="night">Доброй ночи, %s!</string>

    <string-array name="gender">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string-array name="month">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="dayOfWeek">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <string-array name="reminders">
        <item>Старайтесь больше двигаться</item>
        <item>Старайтесь соблюдать режим сна</item>
        <item>Медитация и йога — лучшие способы расслабиться</item>
        <item>Придерживайтесь сбалансированного питания</item>
        <item>Составляйте меню на неделю</item>
        <item>Прием пищи: клетчатка, сложные углеводы и белок</item>
        <item>Наладьте режим питания и жизни</item>
        <item>Регулярно проветривайте помещение</item>
        <item>Не игнорируйте свой дискомфорт</item>
        <item>Не заедайте стресс</item>
        <item>Пейте больше воды</item>
        <item>Делайте правильные перекусы</item>
        <item>Не подавляйте свои эмоции</item>
        <item>Старайтесь сократить употребление кофе</item>
        <item>Сведите к минимуму потребление сахара</item>
        <item>Сократите употребление рафинированных углеводов</item>
        <item>Не переедайте</item>
        <item>Соблюдайте баланс энергии</item>
        <item>Включите овощи в каждый прием пищи</item>
        <item>Включайте белок в каждый прием пищи</item>
        <item>Пробуйте новое</item>
        <item>Составляйте сбалансированный рацион</item>
        <item>Окружите себя людьми со здоровыми привычками</item>
        <item>Отложите телефон во время еды</item>
        <item>Постепенно вводите полезные привычки</item>
        <item>Ешьте только то, что нравится</item>
        <item>Ешьте из любимой посуды</item>
        <item>Наладьте режим сна</item>
        <item>Употребляйте жирную рыбу</item>
        <item>Наполните тарелку «радугой» вкуса и цвета</item>
        <item>Пейте воду перед едой</item>
        <item>Питайтесь по индивидуальному КБЖУ</item>
        <item>Сильнее обработка, меньше питательных веществ</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>