<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/diaryFragment"
        android:icon="@drawable/selector_diary"
        android:title="@string/diary" />

    <item
        android:id="@+id/dietFragment"
        android:icon="@drawable/selector_diet"
        android:title="@string/diet" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_bmenu_chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/recipeFragment"
        android:icon="@drawable/selector_recipe"
        android:title="@string/recipe" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/selector_profile"
        android:title="@string/profile" />
</menu>