<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center_vertical">

    <EditText
        android:id="@+id/nameEt"
        style="@style/EdittextStyle"
        android:layout_gravity="center"
        android:hint="@string/name"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEt"
        style="@style/EdittextStyle"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEt" />

    <EditText
        android:id="@+id/passwordEt"
        style="@style/EdittextStyle"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/genderLayout"
        style="@style/DropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_white_10"
        android:textColorHint="@color/black"
        app:endIconDrawable="@drawable/selector_arrow"
        app:endIconTint="@color/black"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEt">

        <AutoCompleteTextView
            android:id="@+id/genderTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/gender"
            android:inputType="none"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateOfBirthLayout"
        style="@style/DropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_white_10"
        android:textColorHint="@color/black"
        app:endIconDrawable="@drawable/ic_arrow"
        app:endIconTint="@color/black"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderLayout">

        <AutoCompleteTextView
            android:id="@+id/dateOfBirthTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/dateOfBirth"
            android:inputType="none"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registrationBtn"
        style="@style/AuthorizationButtonStyle"
        android:layout_gravity="center"
        android:layout_marginTop="34dp"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirthLayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationBtn">

        <TextView
            android:id="@+id/accountQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/have_account"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/toLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_login"
            android:textColor="@color/dark_orange"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>